<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>approach_planner</name>
    <version>1.16.6</version>
    <description>

        This planner attempts to find a legal place to put a approach for the robot to follow. It does this by moving back along the vector between the robot and the goal point.

    </description>
    <author>Chuanxu An</author>
    <maintainer email="chuanxu@iscas.ac.cn">Aaron Hoy</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/approach_planner</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf2_geometry_msgs</build_depend>

    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>
</package>


